[gd_scene load_steps=4 format=2]

[ext_resource path="res://AR_Mob/ARMob.png" type="Texture" id=1]
[ext_resource path="res://Player/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.51563, 1.51563 )

[node name="AR_Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.507813, 2.52344 )
texture = ExtResource( 1 )
hframes = 24
frame = 23

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -2, -2, 4, 4 )

[connection signal="area_entered" from="." to="." method="_on_AR_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_AR_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
